--- a/x.toml
+++ b/x.toml
@@ -255,7 +255,7 @@ globs = ["developer-docs-site/**/*", "documentation/**/*", "docker/**/*", "langu
 mark-changed = []
 
 [[determinator.path-rule]]
-# Ignore typescript
+# Ignore ecosystem typescript
 globs = ["ecosystem/typescript/**/*", "ecosystem/web-wallet/**/*"]
 mark-changed = []
 
